@@ -1,3 +1,7 @@
+2009-08-30  Oliver Hader  <oliver@typo3.org>
+
+	* Added feature #9292: Integrate hook at the end of tslib_cObj::getImgResource
+
 2009-08-30  Christian Kuhn  <lolli@schwarzbu.ch>
 
 	* Follow-up to #11431: Unit test for getPage_preProcess hook
